# dezhu-agent

./: .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  README.md  opencode.json  pyproject.toml
.opencode/skills/git-commit/: SKILL.md
src/dezhu_agent/: __init__.py  __main__.py  config.py
src/dezhu_agent/core/: agent.py  compression.py  prompt_builder.py  task_state.py
src/dezhu_agent/core/tools/: __init__.py  edit_file_tool.py  read_file_tool.py  terminal_tool.py  todo_tools.py  write_file_tool.py
src/dezhu_agent/models/: message.py  session.py  task.py  tool.py
src/dezhu_agent/services/: __init__.py  session_store.py  tool_registry.py
src/dezhu_agent/utils/: path_utils.py  tool_decorator.py
tests/: conftest.py  test_compression.py  test_prompt_builder.py
